# senec2openwb

./: CMakeLists.txt  CMakePresets.json  Dockerfile  compose.yaml  conanfile.txt  toolchain.cmake
mosquitto/config/: mosquitto.conf
src/: CMakeLists.txt  configManager.cc  configManager.hh  conversion.hh  curl_command  curl_command.sh  dataAcquisitionDefines.hh  integrator.cc  integrator.hh  main.cc  mqttPublisher.cc  mqttPublisher.hh  params.json  senecDataAcquisition.cc  senecDataAcquisition.hh  senecDataAcquisitionCurl.cc  senecDataAcquisitionCurl.hh  senecDataAcquisitionLibCurl.cc  senecDataAcquisitionLibCurl.hh
test/: CMakeLists.txt  configManagerTest.cc  conversionTest.cc  integratorTest.cc  mainTest.cc  testDefines.hh
